--- a/index.html
+++ b/index.html
@@ -12,7 +12,26 @@
 </head>
 
 <body>
- 
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <div class="container">
+            <a href="#" class="navbar-brand">Frontend-developer</a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle = "collapse" data-bs-target ="#navmenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id = "navmenu">
+                <ul class="navbar-nav ms-auto" >
+                    <li class="nav-item"><a href="#learn" class="nav-link">What you'll learn</a>
+                    </li>
+                    <li class="nav-item"><a href="#questions" class="nav-link">Questions</a>
+                    </li>
+                    <li class="nav-item"><a href="#instructor" class="nav-link">Instructors</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 
 
