--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
         <div class="container">
             <a href="#" class="navbar-brand">Frontend-developer</a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle = "collapse" data-bs-target ="#navmenu">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id = "navmenu">
-                <ul class="navbar-nav ms-auto" >
+            <div class="collapse navbar-collapse" id="navmenu">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a href="#learn" class="nav-link">What you'll learn</a>
                     </li>
                     <li class="nav-item"><a href="#questions" class="nav-link">Questions</a>
@@ -32,6 +32,20 @@
             </div>
         </div>
     </nav>
+    <!-- Showcase  -->
+    <section class="bg-dark text-light p-3 text-center text-sm-start">
+        <div class="container">
+            <div class="d-sm-flex align-items-center justify-content-center">
+                <div>
+                    <h1>Become a <span class="text-warning">web developer</span></h1>
+                    <p class="lead my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo amet labore inventore veritatis eum explicabo dolorem animi reiciendis. Dolorem officia deserunt voluptas tempore rerum tenetur corrupti nisi corporis dolor inventore.</p>
+                    <button class="btn btn-primary btn-lg">Start the Enrollment</button>
+                </div>
+                <img src="img/showcase.png" class="img-fluid w-25 d-none d-sm-block" alt="img">
+            </div>
+        </div>
+    </section>
+
 
 
 
