--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
             </div>
         </div>
     </section>
+    <!-- Newsletter -->
+    <section class="bg-primary text-light p-5">
+        <div class="container">
+            <div class="d-md-flex justify-content-between text-align-center">
+                <h3 class="mb-3 mb-md-0">Subscribe to our Newsletter</h3>
+                <div class="input-group ">
+                    <input type="email" class="form-control input-news" placeholder="Enter Email" >
+                    <button class="btn btn-dark btn-lg" type="button" id="button-addon2">Submit</button>
+                  </div>
+            </div>
+        </div>
+    </section>
 
 
 
