--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <title>Frontend Bootcamp</title>
 </head>
@@ -38,7 +39,9 @@
             <div class="d-sm-flex align-items-center justify-content-center">
                 <div>
                     <h1>Become a <span class="text-warning">web developer</span></h1>
-                    <p class="lead my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo amet labore inventore veritatis eum explicabo dolorem animi reiciendis. Dolorem officia deserunt voluptas tempore rerum tenetur corrupti nisi corporis dolor inventore.</p>
+                    <p class="lead my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo amet labore
+                        inventore veritatis eum explicabo dolorem animi reiciendis. Dolorem officia deserunt voluptas
+                        tempore rerum tenetur corrupti nisi corporis dolor inventore.</p>
                     <button class="btn btn-primary btn-lg">Start the Enrollment</button>
                 </div>
                 <img src="img/showcase.png" class="img-fluid w-25 d-none d-sm-block" alt="img">
@@ -51,9 +54,58 @@
             <div class="d-md-flex justify-content-between text-align-center">
                 <h3 class="mb-3 mb-md-0">Subscribe to our Newsletter</h3>
                 <div class="input-group ">
-                    <input type="email" class="form-control input-news" placeholder="Enter Email" >
+                    <input type="email" class="form-control input-news" placeholder="Enter Email">
                     <button class="btn btn-dark btn-lg" type="button" id="button-addon2">Submit</button>
-                  </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- boxes -->
+    <section class="p-5">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md">
+                    <div class="card bg-dark text-light">
+                        <div class="card-body">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-laptop"></i>
+                            </div>
+                            <h3 class="card-title mb-3">
+                                Virtual
+                            </h3>
+                            <div class="card-title mb3 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum tempore aliquam vero ad optio numquam.</div>
+                            <a href="#" class="btn btn-primary">Read more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card bg-secondary text-light">
+                        <div class="card-body">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-person-square"></i>
+                            </div>
+                            <h3 class="card-title mb-3">
+                                Hybrid
+                            </h3>
+                            <div class="card-title mb3 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum tempore aliquam vero ad optio numquam.</div>
+                            <a href="#" class="btn btn-primary">Read more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card bg-dark text-light">
+                        <div class="card-body">
+                            <div class="h1 mb-3">
+                                <i class="bi bi-people-fill"></i>
+                            </div>
+                            <h3 class="card-title mb-3">
+                                In person
+                            </h3>
+                            <div class="card-title mb3 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum tempore aliquam vero ad optio numquam.</div>
+                            <a href="#" class="btn btn-primary">Read more</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
