--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- boxes -->
     <section class="p-5">
         <div class="container">
-            <div class="row text-center">
+            <div class="row text-center g-4">
                 <div class="col-md">
                     <div class="card bg-dark text-light">
                         <div class="card-body">
@@ -110,7 +110,47 @@
         </div>
     </section>
 
+<!-- Learn section  -->
+<section class="p-5" id="learn">
+    <div class="container">
+        <div class="row align-items-center justify-content-between">
+            <div class="col-md">
+                <img src="img/img-2.png" class = "img-fluid" alt="img">
+            </div>
+            <div class="col-md p-5">
+                <h2>Learn The Fundamentals</h2>
+                <p class="lead">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, modi? Ducimus fugiat dolorum commodi.
+                </p>
+                <p class="lead">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum a qui aspernatur repudiandae, numquam maiores odio adipisci dolorum iusto itaque.
+                </p>
+                <a href="#" class="btn btn-light mt-3"><i class="bi bi-chevron-right"></i> Read more</a>
+            </div>
+        </div>
+    </div>
+</section>
 
+<section class="p-5 bg-dark text-light" id="learn">
+    <div class="container">
+        <div class="row align-items-center justify-content-between">
+            
+            <div class="col-md p-5">
+                <h2>Learn React</h2>
+                <p class="lead">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, modi? Ducimus fugiat dolorum commodi.
+                </p>
+                <p class="lead">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum a qui aspernatur repudiandae, numquam maiores odio adipisci dolorum iusto itaque.
+                </p>
+                <a href="#" class="btn text-light bg-primary btn-light mt-3"><i class="bi bi-chevron-right"></i> Read more</a>
+            </div>
+            <div class="col-md">
+                <img src="img/react.svg" class = "img-fluid" alt="img">
+            </div>
+        </div>
+    </div>
+</section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
