--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         tempore rerum tenetur corrupti nisi corporis dolor inventore.</p>
                     <button class="btn btn-primary btn-lg">Start the Enrollment</button>
                 </div>
-                <img src="img/showcase.png" class="img-fluid w-25 d-none d-sm-block" alt="img">
+                <img src="img/developer.svg" class="img-fluid w-25 d-none d-sm-block" alt="img">
             </div>
         </div>
     </section>
@@ -73,7 +73,8 @@
                             <h3 class="card-title mb-3">
                                 Virtual
                             </h3>
-                            <div class="card-title mb3 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum tempore aliquam vero ad optio numquam.</div>
+                            <div class="card-title mb3 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+                                tempore aliquam vero ad optio numquam.</div>
                             <a href="#" class="btn btn-primary">Read more</a>
                         </div>
                     </div>
@@ -87,7 +88,8 @@
                             <h3 class="card-title mb-3">
                                 Hybrid
                             </h3>
-                            <div class="card-title mb3 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum tempore aliquam vero ad optio numquam.</div>
+                            <div class="card-title mb3 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+                                tempore aliquam vero ad optio numquam.</div>
                             <a href="#" class="btn btn-primary">Read more</a>
                         </div>
                     </div>
@@ -101,7 +103,8 @@
                             <h3 class="card-title mb-3">
                                 In person
                             </h3>
-                            <div class="card-title mb3 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum tempore aliquam vero ad optio numquam.</div>
+                            <div class="card-title mb3 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+                                tempore aliquam vero ad optio numquam.</div>
                             <a href="#" class="btn btn-primary">Read more</a>
                         </div>
                     </div>
@@ -110,47 +113,101 @@
         </div>
     </section>
 
-<!-- Learn section  -->
-<section class="p-5" id="learn">
-    <div class="container">
-        <div class="row align-items-center justify-content-between">
-            <div class="col-md">
-                <img src="img/img-2.png" class = "img-fluid" alt="img">
-            </div>
-            <div class="col-md p-5">
-                <h2>Learn The Fundamentals</h2>
-                <p class="lead">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, modi? Ducimus fugiat dolorum commodi.
-                </p>
-                <p class="lead">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum a qui aspernatur repudiandae, numquam maiores odio adipisci dolorum iusto itaque.
-                </p>
-                <a href="#" class="btn btn-light mt-3"><i class="bi bi-chevron-right"></i> Read more</a>
+    <!-- Learn section  -->
+    <section class="p-5" id="learn">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+                <div class="col-md">
+                    <img src="img/img-2.png" class="img-fluid" alt="img">
+                </div>
+                <div class="col-md p-5">
+                    <h2>Learn The Fundamentals</h2>
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, modi? Ducimus fugiat
+                        dolorum commodi.
+                    </p>
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum a qui aspernatur repudiandae,
+                        numquam maiores odio adipisci dolorum iusto itaque.
+                    </p>
+                    <a href="#" class="btn btn-light mt-3"><i class="bi bi-chevron-right"></i> Read more</a>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<section class="p-5 bg-dark text-light" id="learn">
-    <div class="container">
-        <div class="row align-items-center justify-content-between">
-            
-            <div class="col-md p-5">
-                <h2>Learn React</h2>
-                <p class="lead">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, modi? Ducimus fugiat dolorum commodi.
-                </p>
-                <p class="lead">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum a qui aspernatur repudiandae, numquam maiores odio adipisci dolorum iusto itaque.
-                </p>
-                <a href="#" class="btn text-light bg-primary btn-light mt-3"><i class="bi bi-chevron-right"></i> Read more</a>
-            </div>
-            <div class="col-md">
-                <img src="img/react.svg" class = "img-fluid" alt="img">
+    <section class="p-5 bg-dark text-light">
+        <div class="container">
+            <div class="row align-items-center justify-content-between">
+
+                <div class="col-md p-5">
+                    <h2>Learn React</h2>
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, modi? Ducimus fugiat
+                        dolorum commodi.
+                    </p>
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum a qui aspernatur repudiandae,
+                        numquam maiores odio adipisci dolorum iusto itaque.
+                    </p>
+                    <a href="#" class="btn text-light bg-primary btn-light mt-3"><i class="bi bi-chevron-right"></i>
+                        Read more</a>
+                </div>
+                <div class="col-md">
+                    <img src="img/react.svg" class="img-fluid" alt="img">
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+    <!-- FAQ -->
+    <section class="p-5" id="questions">
+        <div class="container">
+            <h2 class="text-center mb-3">Frequently Asked Questions</h2>
+        </div>
+        <div class="accordion accordion-flush" id="accordionQuestions">
+            <!-- Item-1 -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#question-one">
+                        Where exactly are you located?
+                    </button>
+                </h2>
+                <div id="question-one" class="accordion-collapse collapse" data-bs-parent="#accordionQuestions">
+                    <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non obcaecati
+                        ex quia fugiat veniam, maxime odit minus impedit possimus atque, eveniet, temporibus molestias
+                        iusto aliquam? Corrupti veniam voluptas quisquam. Praesentium.
+                    </div>
+                </div>
+            </div>
+            <!-- Item-2 -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#question-two">
+                        How much does it cost?
+                    </button>
+                </h2>
+                <div id="question-two" class="accordion-collapse collapse" data-bs-parent="#accordionQuestions">
+                    <div class="accordion-body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem velit eveniet natus repellendus autem voluptas, quidem obcaecati incidunt ducimus necessitatibus molestias omnis maiores ad accusamus adipisci, possimus quasi quaerat assumenda nobis fuga rem? Unde iusto ipsum odio accusamus, et magni quos dolore sit placeat. Perspiciatis!
+                    </div>
+                </div>
+            </div>
+            <!-- Item-3 -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#question-three">
+                        What Technologies I need to Know?
+                    </button>
+                </h2>
+                <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#accordionQuestions">
+                    <div class="accordion-body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio minus voluptate, ipsam possimus ex pariatur maxime sit libero ipsum eius quod veritatis hic asperiores numquam sint, ducimus quo! Quam distinctio fugit reiciendis laboriosam sit eum, fugiat nobis consequuntur, quod, porro possimus iusto! Excepturi, autem minima animi vero quo sit nemo?
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
