--- a/index.html
+++ b/index.html
@@ -208,7 +208,82 @@
             </div>
         </div>
     </section>
-
+<!-- Instructors  -->
+<section id="instructors" class="bg-primary p-5">
+    <div class="container">
+        <h2 class="text-center text-white">Our Instructors</h2>
+        <p class="lead text-white text-center mb-5">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas dolorum suscipit ipsa possimus aspernatur perferendis!
+        </p>
+        <div class="row g-4">
+            <!-- Grid -->
+            <!-- card-1 -->
+            <div class="col-md-6 col-lg-3">
+                <div class="card bg-light">
+                    <div class="card-body text-center">
+                        <img src="https://randomuser.me/api/portraits/women/11.jpg" class=" rounded-circle  mb-3" alt="img">
+                        <h3 class="card-title mb-3">
+                            Chloe Decker
+                        </h3>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto consequatur quidem excepturi suscipit vero officia repudiandae porro. Placeat, mollitia eius?</p>
+                        <a href="#"><i class="bi bi-twitter text-dark mx-2"></i></a>
+                        <a href="#"><i class="bi bi-instagram text-dark mx-2"></i></a>
+                        <a href="#"><i class="bi bi-facebook text-dark mx-2"></i></a>
+                        <a href="#"><i class="bi bi-linkedin text-dark mx-2"></i></a>
+                    </div>
+                </div>
+            </div>
+<!-- card-2 -->
+            <div class="col-md-6 col-lg-3">
+                <div class="card bg-light">
+                    <div class="card-body text-center">
+                        <img src="https://randomuser.me/api/portraits/men/13.jpg" class=" rounded-circle mb-3" alt="img">
+                        <h3 class="card-title mb-3">
+                            Dan
+                        </h3>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto consequatur quidem excepturi suscipit vero officia repudiandae porro. Placeat, mollitia eius?</p>
+                        <a href="#"><i class="bi bi-twitter text-dark mx-2"></i></a>
+                        <a href="#"><i class="bi bi-instagram text-dark mx-2"></i></a>
+                        <a href="#"><i class="bi bi-facebook text-dark mx-2"></i></a>
+                        <a href="#"><i class="bi bi-linkedin text-dark mx-2"></i></a>
+                    </div>
+                </div>
+            </div>
+<!-- card-3 -->
+            <div class="col-md-6 col-lg-3">
+                <div class="card bg-light">
+                    <div class="card-body text-center">
+                        <img src="https://randomuser.me/api/portraits/women/17.jpg" class=" rounded-circle mb-3 " alt="img">
+                        <h3 class="card-title mb-3">
+                            Charlotte
+                        </h3>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto consequatur quidem excepturi suscipit vero officia repudiandae porro. Placeat, mollitia eius?</p>
+                        <a href="#"><i class="bi bi-twitter text-dark mx-2"></i></a>
+                        <a href="#"><i class="bi bi-instagram text-dark mx-2"></i></a>
+                        <a href="#"><i class="bi bi-facebook text-dark mx-2"></i></a>
+                        <a href="#"><i class="bi bi-linkedin text-dark mx-2"></i></a>
+                    </div>
+                </div>
+            </div>
+<!-- card-4 -->
+            <div class="col-md-6 col-lg-3">
+                <div class="card bg-light">
+                    <div class="card-body text-center">
+                        <img src="https://randomuser.me/api/portraits/women/51.jpg" class=" rounded-circle mb-3" alt="img">
+                        <h3 class="card-title mb-3">
+                            Lexa
+                        </h3>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto consequatur quidem excepturi suscipit vero officia repudiandae porro. Placeat, mollitia eius?</p>
+                        <a href="#"><i class="bi bi-twitter text-dark mx-2"></i></a>
+                        <a href="#"><i class="bi bi-instagram text-dark mx-2"></i></a>
+                        <a href="#"><i class="bi bi-facebook text-dark mx-2"></i></a>
+                        <a href="#"><i class="bi bi-linkedin text-dark mx-2"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
