--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
         <div class="container">
-            <a href="#" class="navbar-brand">Frontend-developer</a>
+            <a href="#" class="navbar-brand">Frontend-developer Bootcamp</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
@@ -284,6 +284,13 @@
         </div>
     </div>
 </section>
+<!-- Footer -->
+<footer class="p-5 bg-dark text-light text-center position-relative">
+    <div class="container">
+        <p class="lead">Copyright &copy; 2022 Frontend Bootcamp</p>
+        <a href="#" class="position-absolute bottom-0 end-0 p-5"><i class="bi bi-arrow-up-circle-fill h1"></i></a>
+    </div>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
