--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
         <div class="container">
-            <a href="#" class="navbar-brand">Frontend-developer Bootcamp</a>
+            <a href="#" class="navbar-brand">Frontend Bootcamp</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
                     </li>
                     <li class="nav-item"><a href="#questions" class="nav-link">Questions</a>
                     </li>
-                    <li class="nav-item"><a href="#instructor" class="nav-link">Instructors</a>
+                    <li class="nav-item"><a href="#instructors" class="nav-link">Instructors</a>
                     </li>
                 </ul>
             </div>
@@ -42,7 +42,7 @@
                     <p class="lead my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo amet labore
                         inventore veritatis eum explicabo dolorem animi reiciendis. Dolorem officia deserunt voluptas
                         tempore rerum tenetur corrupti nisi corporis dolor inventore.</p>
-                    <button class="btn btn-primary btn-lg">Start the Enrollment</button>
+                    <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#enroll">Start the Enrollment</button>
                 </div>
                 <img src="img/developer.svg" class="img-fluid w-25 d-none d-sm-block" alt="img">
             </div>
@@ -291,6 +291,51 @@
         <a href="#" class="position-absolute bottom-0 end-0 p-5"><i class="bi bi-arrow-up-circle-fill h1"></i></a>
     </div>
 </footer>
+
+<!-- Modal -->
+<div class="modal fade" id="enroll" tabindex="-1" aria-labelledby="enrollLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="enrollLabel">Frontend-developer</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p class="lead">Fill out this form and we will get back to you</p>
+          <form >
+              <div class="mb-3">
+                  <label for="first-name" class="col-form-label">
+                      First-name:
+                  </label>
+                  <input type="text" class="form-control" id="first-name">
+              </div>
+              <div class="mb-3">
+                  <label for="last-name" class="col-form-label">
+                      Last-name:
+                  </label>
+                  <input type="text" class="form-control" id="last-name">
+              </div>
+              <div class="mb-3">
+                  <label for="email" class="col-form-label">
+                      Email id:
+                  </label>
+                  <input type="email" class="form-control" id="email">
+              </div>
+              <div class="mb-3">
+                  <label for="number" class="col-form-label">
+                      Phone number:
+                  </label>
+                  <input type="number" class="form-control" id="number">
+              </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Submit</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
